- Push min perl version to 5.16, as needed by PDL::FFTW3
- Modify P::LE::NR2::Field so as not to modify Haydock coefficients
  inadvertently
0.023 2024-10-02
- Add tests for modules ST
- Add tensorial modules ST, to deal with anisotropic components
0.022 2024-09-21
- Fix mistake in Ph::WE::ST::Haydock::applyMetric
- Fix mistake in Ph::WE::S::Haydock::applyMetric
- Add Photonic::LE::ST::GreenP

- Add Photonic::WE::ST::Metric Almost identical to Photonic::WE::S::Metric
- Add Photonic::LE::ST::Field Almost identical to Ph::LE::S::Field
- Add Photonic::LE::ST::EpsTensor Almost identical to Ph::LE::S::EpsTensor
- Add Photonic::LE::ST::EpsL. Almost identical to Ph::LE::S::EpsL
- Add tests for Photonic::LE::ST::Haydock
- Add and mofify Photonic::LE::ST::Haydock to use tensorial epsilon
- Add some tests for Photonic::Geometry::FromEpsilonTensor
- Modify Photonic::Roles::Geometry so it can deal with Epsilon Tensor
- Add Photonic::Geometry::FromEpsilonTensor
- Add types ComplexMatrix and ComplexMatrixField, for tensorial input in dielectric functions
- Fix bug in macroscopic response from fields in Ph::LE::NR2::Field and Ph::LE::S::Field
- Fix skip test in geometry.t when there is no image converter
- separate storeAllFN from stateFN
- Haydock states stored in memory-mapped files rather than using Storable
- remove the state_iterator capability which is replaced by memory-mapping, allowing large threaded calculations
- switch type system to Type::Tiny
- switch OO system to Moo
- make Photonic::Roles::Field

0.021 2021-10-01
- Add example of honeycomb lattice for LE::NR2
- Admit 'haydock' as an optional parameter in P::Roles::EpsTensor
- Documentation P::LE::NR2::EpsTensor
- Documentation P::Geometry::FromB

0.020 2021-09-25
- Admit Ed J (mohawk2) PR
- Merge OneH and ALlH into Haydock
- Inmutable objects. Response functions should be given at creation time
- factorize lots of codes
- use ndarrays instead of perl arrays
- unify Reorthogonalize roles

0.019 2021-09-24