@@ -1,3 +1,5 @@
+- Revert modification to P::LE::NR2::Field as it is no longer needed.
+- Modify Utils::cgtsv to avoid erroneously modifying its arguments
 - Push min perl version to 5.16, as needed by PDL::FFTW3
 - Modify P::LE::NR2::Field so as not to modify Haydock coefficients
   inadvertently
